amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-types.api.report
ModelId: file://amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-types.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 5

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#duplicated-declaration
  Message: Cannot exist two or more types with name 'Person'
  Severity: Violation
  Target: null
  Property: 
  Range: [(21,0)-(21,13)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#duplicated-declaration
  Message: Cannot exist two or more types with name 'Person'
  Severity: Violation
  Target: file://amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-types.api.graphql#/declares/union/Person
  Property: 
  Range: [(23,0)-(23,26)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#duplicated-declaration
  Message: Cannot exist two or more types with name 'Person'
  Severity: Violation
  Target: null
  Property: 
  Range: [(25,0)-(27,1)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#duplicated-declaration
  Message: Cannot exist two or more types with name 'Person'
  Severity: Violation
  Target: null
  Property: 
  Range: [(29,0)-(33,1)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#duplicated-declaration
  Message: Cannot exist two or more types with name 'Person'
  Severity: Violation
  Target: null
  Property: 
  Range: [(35,0)-(37,1)]
  Location: 
